//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

package com.lvl6.proto;

option java_outer_classname = "ItemsProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

//------------------------------------------------------------------------------------------

message UserItemProto {
	optional int32 userId = 1;
	optional int32 itemId = 2;
	optional int32 quantity = 3;
}


//------------------------------------------------------------------------------------------

message ItemProto {
	optional int32 itemId = 1;
	optional string name = 2;
	optional string imgName = 3;
	optional ItemType itemType = 4;
	optional int32 staticDataId = 5;
}

//------------------------------------------------------------------------------------------

enum ItemType {
	BOOSTER_PACK = 1;
}
